--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/bootstrap.css"> 
     <link rel="stylesheet" href='/static/css/style.css'> 
-    <title>JADO</title>
+    <title>YADO</title>
 </head>
 <body>
     <div class="container-flex">
@@ -14,7 +14,7 @@
 
         <div class="startbutton text-center">
             <button class="btn" id="btn">
-                JADO
+                YADO
             </button>
         </div>
         <div class="row"></div>
